--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,61 @@
-/* Root rule */
 :root {
-  
+	--font-chakra: 'Chakra Petch', sans-serif;
 }
 
-/* Wildcard rule */
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	background-color: #ffb703;
+}
+
+.chakra {
+  font-family: var(--font-chakra);
+}
+
+.light-text {
+  color: #ffe5d9;
+}
+
+h1 {
+  font-size: 5rem;
+  font-weight: 700;
+}
+
+/* Base styles */
+.logo-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 4rem;
+}
+
+/* Fade-in animation */
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+      transform: translateY(20px);
+  }
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+/* Logo animation */
+.logo-img {
+  opacity: 0;
+  animation: fadeIn 0.5s ease forwards;
+  width: 5rem;
+  height: 5rem;
+}
+
+/* Letter animation */
+.letter {
+  display: inline-block;
+  opacity: 0;
+  animation: fadeIn 0.2s ease forwards;
 }
