--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,14 @@ h1 {
   padding: 4rem;
 }
 
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 4rem;
+}
+
 /* Fade-in animation */
 @keyframes fadeIn {
   from {
@@ -108,6 +116,11 @@ h2 {
 	font-family: var(--font-chakra);
 	font-weight: 400;
 	font-style: normal;
+  height: 75px;
+  width: 218px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 1rem;
 }
 
